project structure changed

--- a/src/index.html
+++ b/src/index.html
@@ -9,16 +9,8 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-    <title>Frontend Mentor | Rock, Paper, Scissors</title>
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
+    <title>Rock, Paper, Scissors</title>
+    <link rel="stylesheet" href="./scss/style.css">
   </head>
   <body>
     <img src="../images/logo.svg" />
