--- a/src/index.html
+++ b/src/index.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./images/favicon-32x32.png"
-    />
-    <title>Rock, Paper, Scissors</title>
-    <link rel="stylesheet" href="./scss/style.css">
-  </head>
-  <body>
-    <img src="../images/logo.svg" />
-    <button class="rules-btn">Rules</button>
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">nataliao2613</a>.
-    </div>
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="./images/favicon-32x32.png"
+        />
+        <title>Rock, Paper, Scissors</title>
+        <link rel="stylesheet" href="./scss/style.css" />
+    </head>
+    <body>
+        <img src="../images/logo.svg" />
+        <button class="rules-btn">Rules</button>
+        <footer>
+            Challenge by
+            <a
+                href="https://www.frontendmentor.io?ref=challenge"
+                target="_blank"
+                >Frontend Mentor</a
+            >. Coded by <a href="#">nataliao2613</a>.
+        </footer>
+    </body>
 </html>
