header structure added

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,14 @@
         <link rel="stylesheet" href="./scss/style.css" />
     </head>
     <body>
-        <img src="../images/logo.svg" />
+        <header>
+            <img src="../images/logo.svg" />
+            <div class="score-box">
+                <span>Score</span>
+                <h1 class="score-box__points">0</h1>
+            </div>
+        </header>
+
         <button class="rules-btn">Rules</button>
         <footer>
             Challenge by
