--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,11 @@
         />
         <title>Rock, Paper, Scissors</title>
         <link rel="stylesheet" href="./scss/style.css" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@600;700&display=swap"
+            rel="stylesheet"
+        />
     </head>
     <body>
         <header>
