--- a/src/index.html
+++ b/src/index.html
@@ -21,8 +21,10 @@
         <header>
             <img src="../images/logo.svg" />
             <div class="score-box">
-                <span>Score</span>
-                <h1 class="score-box__points">0</h1>
+                <div class="score-box__text">
+                    <span>Score</span>
+                    <span class="score-box__text points">0</span>
+                </div>
             </div>
         </header>
 
