rules button styled and positioned

--- a/src/index.html
+++ b/src/index.html
@@ -27,8 +27,10 @@
                 </div>
             </div>
         </header>
+        <main>
+            <button class="rules-btn">Rules</button>
+        </main>
 
-        <button class="rules-btn">Rules</button>
         <footer>
             Challenge by
             <a
