background to option section added

--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,9 @@
             </div>
         </header>
         <main>
+            <div class="options">
+                <img src="../images/bg-triangle.svg" alt="" />
+            </div>
             <button class="rules-btn">Rules</button>
         </main>
 
