--- a/src/index.html
+++ b/src/index.html
@@ -28,9 +28,7 @@
             </div>
         </header>
         <main>
-            <div class="options">
-                <img src="../images/bg-triangle.svg" alt="" />
-            </div>
+            <div class="options"></div>
             <button class="rules-btn">Rules</button>
         </main>
 
