start game section styled

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,17 @@
             </div>
         </header>
         <main>
-            <div class="options"></div>
+            <div class="options">
+                <div class="options__icon options__icon--paper">
+                    <div class="image"></div>
+                </div>
+                <div class="options__icon options__icon--scissors">
+                  <div class="image"></div>
+              </div>
+              <div class="options__icon options__icon--rock">
+                <div class="image"></div>
+            </div>
+
             <button class="rules-btn">Rules</button>
         </main>
 
@@ -38,7 +48,8 @@
                 href="https://www.frontendmentor.io?ref=challenge"
                 target="_blank"
                 >Frontend Mentor</a
-            >. Coded by <a href="#">nataliao2613</a>.
+            >. Coded by
+            <a href="https://github.com/nataliao2613">nataliao2613</a>.
         </footer>
     </body>
 </html>
