rules window added and styled

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
             rel="stylesheet"
         />
     </head>
+
     <body>
         <header>
             <img src="../images/logo.svg" />
@@ -41,6 +42,22 @@
             </div>
             <button class="rules-btn">Rules</button>
         </main>
+        <div class="rules">
+            <div class="rules__header">
+                <h1>Rules</h1>
+                <img
+                    src="../images/icon-close.svg"
+                    alt="close icon"
+                    class="close-button"
+                />
+            </div>
+
+            <img
+                src="../images/image-rules.svg"
+                alt="rules"
+                class="rules__image"
+            />
+        </div>
 
         <footer>
             Challenge by
@@ -52,4 +69,5 @@
             <a href="https://github.com/nataliao2613">nataliao2613</a>.
         </footer>
     </body>
+    <script src="./main.js"></script>
 </html>
