game section added and styled

--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,20 @@
                     <div class="image"></div>
                 </div>
             </div>
+            <div class="game">
+                <div class="game__user">
+                    <p>You picked</p>
+                    <div class="user-choice">
+                        <div class="options__icon options__icon--rock">
+                            <div class="image"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="game__computer">
+                    <p>The house picked</p>
+                    <div class="game__computer choice"></div>
+                </div>
+            </div>
             <button class="rules-btn">Rules</button>
         </main>
         <div class="rules">
