--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
                 <div class="game__user">
                     <p>You picked</p>
                     <div class="user-choice">
-                        <div class="options__icon options__icon--rock">
+                        <div class="options__icon">
                             <div class="image"></div>
                         </div>
                     </div>
