computer choice display

--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,13 @@
                 </div>
                 <div class="game__computer">
                     <p>The house picked</p>
-                    <div class="game__computer choice"></div>
+                    <div class="choice-placement">
+                        <div class="computer-choice">
+                            <div class="options__icon">
+                                <div class="image"></div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <button class="rules-btn">Rules</button>
