'who win' header added

--- a/src/index.html
+++ b/src/index.html
@@ -49,6 +49,10 @@
                         </div>
                     </div>
                 </div>
+                <div class="result">
+                    <h1 class="result__header"></h1>
+                    <button>Play again</button>
+                </div>
                 <div class="game__computer">
                     <p>The house picked</p>
                     <div class="choice-placement">
