score saved in local storage

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
             <div class="score-box">
                 <div class="score-box__text">
                     <span>Score</span>
-                    <span class="score-box__text points">0</span>
+                    <span class="score-box__text points"></span>
                 </div>
             </div>
         </header>
