--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
             <img src="../images/logo.svg" />
             <div class="score-box">
                 <div class="score-box__text">
-                    <span>Score</span>
+                    <span class="score-box__text score">Score</span>
                     <span class="score-box__text points"></span>
                 </div>
             </div>
@@ -82,16 +82,6 @@
                 class="rules__image"
             />
         </div>
-
-        <footer>
-            Challenge by
-            <a
-                href="https://www.frontendmentor.io?ref=challenge"
-                target="_blank"
-                >Frontend Mentor</a
-            >. Coded by
-            <a href="https://github.com/nataliao2613">nataliao2613</a>.
-        </footer>
     </body>
     <script src="./main.js"></script>
 </html>
