--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,10 @@
                     </div>
                 </div>
                 <div class="result">
-                    <h1 class="result__header"></h1>
+                    <div class="result__header">
+                        <h1></h1>
+                    </div>
+
                     <button>Play again</button>
                 </div>
                 <div class="game__computer">
