some fixes in html file

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
 
     <body>
         <header>
-            <img src="../images/logo.svg" />
+            <img src="../images/logo.svg" alt="logo" />
             <div class="score-box">
                 <div class="score-box__text">
                     <span class="score-box__text score">Score</span>
@@ -51,7 +51,7 @@
                 </div>
                 <div class="result">
                     <div class="result__header">
-                        <h1></h1>
+                        <h1>0</h1>
                     </div>
 
                     <button>Play again</button>
